--- a/stylescss.css
+++ b/stylescss.css
@@ -16,7 +16,7 @@ body{
 .container{
   max-width: 500px;
   width: 100%;
-  background-color: #035f34;
+  background-color: #73ccd0;
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
@@ -66,7 +66,7 @@ form .input-box span.details{
 .user-details .input-box input:valid{
   border-color: #9b59b6;
 }
- form .gender-details .gender-title{
+ form .meal-details .meal-title{
   font-size: 20px;
   font-weight: 500;
  }
